[package]
name = "chapter3-akaze-features-extraction"
version = "0.1.0"
authors = ["codec-abc <viot.camille@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cv = { git = "https://github.com/rust-cv/cv.git" }
imgshow = { git = "https://github.com/rust-cv/cv.git" }
image = "0.23.7"
imageproc = "0.21.0"